# TITA_DEMO

./: README.md
TITA_interface/src/tita_interaction_msgs/: CMakeLists.txt  package.xml
TITA_interface/src/tita_motion_msgs/: package.xml
TITA_interface/src/tita_motion_msgs/msg/: ControllerCommandJump.msg  Height.msg
TITA_interface/src/tita_system_msgs/: package.xml
TITA_interface/src/tita_system_msgs/msg/: BatterieStates.msg
ros2_ws/TITA_interface/src/tita_interaction_msgs/action/: AudioPlay.action
ros2_ws/TITA_interface/src/tita_motion_msgs/: CMakeLists.txt
ros2_ws/TITA_interface/src/tita_motion_msgs/msg/: ControllerCommandLock.msg  LocomotionStatus.msg  MotorGroupIn.msg  MotorIn.msg
ros2_ws/TITA_interface/src/tita_system_msgs/: CMakeLists.txt
ros2_ws/TITA_interface/src/tita_system_msgs/msg/: LocomotionStatus.msg  MotorStatus.msg  PowerSupplyInfo.msg  SensorStatus.msg
