<?xml version="1.0"?>
<package format="3">
  <name>tita_system_msgs</name>
  <version>0.0.1</version>
  <description>System-related messages for the TITA robot, including battery and power status.</description>
  <maintainer email="zuyixiong@todo.todo">zuyixiong</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
